[gd_scene load_steps=2 format=3 uid="uid://e4f5g6h7i8j9k0l1"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_1"]

[node name="GameUI" type="Control" groups=["game_ui"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeartsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Coins: 0"

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Level: 1"

